<resources>
    <string name="app_name">EncryptionApp</string>
    <string name="enter_word_or_phrase">Enter word or phrase:</string>
    <string name="app_name_header_text">Encryption App</string>
    <string name="result_text">Result:</string>
    <string name="encrypt_button_text">Encrypt</string>
    <string name="decrypt_button_text">Decrypt</string>
    <string name="new_encryption_title">Encryption</string>
    <string name="new_encryption_description">Encrypt and decrypt new words or phrases.</string>
    <string name="history_title">History</string>
    <string name="history_description">View your previous activity.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_description">Change your settings for encryption.</string>
    <string name="encryption_method_text">This encryption will use AES-256-CBC.</string>
    <string name="enter_text_title">Enter a word or phrase below to see it\'s encrypted value:</string>
    <string name="change_encryption_method_text">The encryption method used can be changed in settings.</string>
    <string name="decrypting_text">Decrypting…</string>
    <string name="encrypting_text">Encrypting…</string>
    <string name="input_text">"Input: </string>
    <string name="output_text">"Output: </string>
    <string name="date_time_text">"Time: </string>
    <string name="encryption_method_text_history">"Method: </string>
    <string name="operation_text">"Operation: </string>
</resources>