<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.EncryptionActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/input_card"
            android:layout_width="300sp"
            android:layout_height="250sp"
            android:layout_margin="10sp"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/enter_text_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:padding="5sp"
                    android:text="@string/enter_text_title"
                    android:textAlignment="center" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_string_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300sp"
                    android:layout_height="60sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_string_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_word_or_phrase"
                        android:inputType="text"
                        android:maxLength="50"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/encryption_method_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:padding="5sp"
                    android:text="@string/encryption_method_text"
                    android:textAlignment="center" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/change_encryption_method_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:padding="5sp"
                    android:text="@string/change_encryption_method_text"
                    android:textAlignment="center" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/result_card"
            android:layout_width="300sp"
            android:layout_height="160sp"
            android:layout_margin="10sp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/result_text_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_text" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/result_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/encrypt_button"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_margin="5sp"
            android:text="@string/encrypt_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/decrypt_button"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_margin="5sp"
            android:text="@string/decrypt_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>